[package]
name = "count-min-sketch"
description = "Count-min-sketch implementation"
version = "0.1.4"
homepage = "https://github.com/jedisct1/rust-count-min-sketch"
keywords = ["sketching"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "data-structures"]

[badges]
travis-ci = { repository = "jedisct1/rust-count-min-sketch" }
appveyor = { repository = "jedisct1/rust-count-min-sketch" }

[features]
nightly = [ ]
default = [ ]

[dependencies]
clippy = {version = ">=0", optional = true}
rand = "~0.4"
siphasher = "~0.2"
