[package]
name = "count-min-sketch"
description = "Count-min-sketch implementation"
version = "0.1.6"
homepage = "https://github.com/jedisct1/rust-count-min-sketch"
keywords = ["sketching"]
license = "MIT"
authors = ["Frank Denis <github@pureftpd.org>"]
categories = ["algorithms", "data-structures"]
edition = "2018"

[badges]
travis-ci = { repository = "jedisct1/rust-count-min-sketch" }
appveyor = { repository = "jedisct1/rust-count-min-sketch" }

[features]
nightly = [ ]
default = [ ]

[dependencies]
rand = "0.7"
siphasher = "0.3"
